https://bugs.webkit.org/show_bug.cgi?id=75296 JSString should not have JS_EXPORTCLASS annotation

Patch by Hajime Morrita <morrita@chromium.org> on 2012-01-06
Reviewed by Kevin Ollivier.

* runtime/JSString.h: Removed JS_EXPORTCLASS annotation.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
Added missing symbols which were hidden by JS_EXPORTCLASS.

Canonical link: https://commits.webkit.org/92564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104359 268f45cc-cd09-0410-ab3c-d52691b4dbfc